-------------------------------------------------
GearSwap 0.812 - Fixed Interruption handling for action messages that show the player as the target regardless the real target.
-------------------------------------------------
GearSwap 0.811 - Added a check for whether or not a given spell/ability can be used. Made player.equipment update between pretarget/precast/midcast. Deleted the second argument to pretarget, precast, midcast, aftercast, pet_midcast, and pet_aftercast.
-------------------------------------------------
GearSwap 0.810 - Changed how precast and midcast are defined for players. Removed verify_equip and force_send. Refactored a great deal.
-------------------------------------------------
GearSwap 0.802 - Introduced the debugging "clocking" setting. Changed how actions are injected.
-------------------------------------------------
GearSwap 0.801 - Combated double precasts, fixed a variety of nil errors, and made Paralysis work (hopefully).
-------------------------------------------------
GearSwap 0.800 - Added pretarget and moved precast to outgoing_chunk. Changed "buff_change()" to pass a boolean instead of a string indicating whether the buff was gained or lost.
-------------------------------------------------
GearSwap 0.723 - Removed a debug message, updated documentation, and refactored equip_processing.lua extensively.
-------------------------------------------------
GearSwap 0.722 - Changed the ranged attack spell table to reflect the resources. Added spell.interrupted boolean. Added a persistent spell for ambiguous interruption message cases. Changed interrupted action.type to "Interruption"... Many things.
-------------------------------------------------
GearSwap 0.721 - Adjusted for API changes and related documentation.
-------------------------------------------------