@@ -1,4 +1,6 @@
 -------------------------------------------------
+GearSwap 0.813 - Fixed issues with /pet. Meddled with triggering interruption again. Potentially re-created the Paralysis issue in the process.
+-------------------------------------------------
 GearSwap 0.812 - Fixed Interruption handling for action messages that show the player as the target regardless the real target.
 -------------------------------------------------
 GearSwap 0.811 - Added a check for whether or not a given spell/ability can be used. Made player.equipment update between pretarget/precast/midcast. Deleted the second argument to pretarget, precast, midcast, aftercast, pet_midcast, and pet_aftercast.
